--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.18</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
