--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,5 +6,17 @@
          metadata-complete="true">
   <!-- 将servlet 版本更改为3.0版本 -->
 
+    <servlet>
+      <servlet-name>seckill-dispater</servlet-name>
+      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+      <init-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:spring/spring-*.xml</param-value>
+      </init-param>
+    </servlet>
 
+    <servlet-mapping>
+      <servlet-name>seckill-dispater</servlet-name>
+      <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
